@@ -9,11 +9,11 @@
 		{/if}
 		{foreach $group option}
 			{$isSelected = false}
-				{if is_array($valueTemplate) && in_array($option.value, $valueTemplate)}
-					{$isSelected = true}
-					{$valueTemplate	= unsetArrayValue($valueTemplate,$option.value)}
-				{/if}
-			<option value="{htmlencode $option.value}" {if $option.class != ""}class="{$option.class}"{/if} {if $isSelected} selected="selected"{/if} {if $option.disabled}disabled="disabled"{/if}>{$option.label}</option>
+			{if is_array($valueTemplate) && in_array($option.value, $valueTemplate) && !option.disabled}
+				{$isSelected = true}
+				{$valueTemplate	= unsetArrayValue($valueTemplate,$option.value)}
+			{/if}
+			<option value="{htmlencode $option.value}" {if $option.class}class="{$option.class}"{/if} {if $isSelected} selected="selected"{/if} {if $option.disabled}disabled="disabled"{/if}>{$option.label}</option>
 		{/foreach}
 		{if $label != "none"}
 			</optgroup>
