@@ -15,6 +15,10 @@ core 2.2.0 - not released yet
 	* Added: TodoyuArray::assureFromJSON() - Takes a JSON string, tries to decode it as an array and makes sure an array is return (even on invalid JSON)
 	* Added: TodoyuRecordManager::deleteRecords() sets deleted flag for records in a table by where statement
 	* Added: TodoyuTime::getWeekEndDayIndexes() - as in date('w'), depends in first day of week
+	* Added: Call hook core.ac.selected and fire change event on AC element selection
+	* Added: TodoyuDateRange::getLabelWithTime()
+	* Added: Initialize fake console element to prevent errors on console.log() in not supporting browsers
+	* Changed: Prevent selection of disabled select option
 	* Changed: Todoyu.Time: time means now php timestamp and date means js date object (for vars and methods)
 	* Changed: Updates of date fields with the popup calendar will now trigger a change event
 	* Changed: Used faster (int) instead of intval() for integer typecasting
